--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,9 +1,6 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <span>FoodRunner</span>
-      <button mat-icon-button md-48 >
-          <mat-icon>home</mat-icon>
-        </button>
+    <a mat-button routerLink=".">FOODRUNNER</a>
     <button mat-icon-button [matMenuTriggerFor]="menu">
       <mat-icon>view_headline</mat-icon>
     </button>
@@ -17,5 +14,7 @@
         <span>Disable alerts</span>
       </button>
     </mat-menu>
+    <span class="fill-space"></span>
+    <a mat-button routerLink=".">Register</a>
   </mat-toolbar-row>
 </mat-toolbar>
