implemented auth functions

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <a mat-button routerLink=".">FOODRUNNER</a>
+    <a mat-button routerLink="."><i>FOODRUNNER</i></a>
     <button mat-icon-button [matMenuTriggerFor]="menu">
       <mat-icon>view_headline</mat-icon>
     </button>
