--- a/src/app/pages/menuitems/menuitems.component.html
+++ b/src/app/pages/menuitems/menuitems.component.html
@@ -1,5 +1,17 @@
-<div>
-  <ul>
-    <li *ngFor="let item of menuItems">{{ item.name }}</li>
-  </ul>
-</div>
+<mat-grid-list [cols]="breakpoint" rowHeight="1:1" (window:resize)="onResize($event)">
+  <mat-grid-tile *ngFor="let item of menuItems">
+    <mat-card class="menuItem-card">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>{{item.name}}</mat-card-title>
+        <mat-card-subtitle>{{item.price}} Ft</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+        <p>{{item.description}}</p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button>Add to cart</button>
+      </mat-card-actions>
+    </mat-card>
+  </mat-grid-tile>
+</mat-grid-list>
