--- a/src/app/pages/menuitems/menuitems.component.html
+++ b/src/app/pages/menuitems/menuitems.component.html
@@ -10,7 +10,7 @@
         <p>{{item.description}}</p>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-button>Add to cart</button>
+        <button mat-stroked-button color="warn" (click)="onBuy(item.id)">Buy</button>
       </mat-card-actions>
     </mat-card>
   </mat-grid-tile>
