--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -11,7 +11,7 @@
         </mat-grid-tile>
         <mat-grid-tile>
           <mat-form-field class="full-width">
-            <input matInput placeholder="Password" formControlName="password">
+            <input matInput placeholder="Password" type="password" formControlName="password">
             <mat-error *ngIf="password.invalid">
               {{getPasswordErrorMessage()}}
             </mat-error>
