--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,17 +1,36 @@
+.home-bg {
+    width: 100%;
+    height: 100%;
+    background-image: url(../../../assets/images/food-bg.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.welcome {
+    padding-top: 2%;
+    text-align: center;
+    font-weight: 700;
+    font-size: 2em;
+    color: white;
+}
+
+.welcome-q {
+    text-align: center;
+    font-weight: 700;
+    font-size: 1.6em;
+    color: white;
+}
+
 mat-card {
     width: calc(100% - 70px);
     height: calc(100% - 70px);
 }
 
-mat-card img{
-    object-fit: cover; 
-    width: 100%; 
+mat-card img {
+    object-fit: cover;
+    width: 100%;
     height: 40%;
-  }
-
-.header-image-1 {
-    background-image: url('https://www.bbcgoodfood.com/sites/default/files/recipe-collections/collection-image/2013/05/recipe-image-legacy-id-1074500_11.jpg');
-    background-size: cover;
 }
 
 .card-depth:hover {
