refactoring: removed unused files and imports, small design changes

--- a/src/app/pages/menuitems/menuitems.component.html
+++ b/src/app/pages/menuitems/menuitems.component.html
@@ -1,5 +1,7 @@
+<mat-toolbar-row>
+    <span>{{currentCategory}}</span>
+  </mat-toolbar-row>
 <div class="menuItems">
-  <h2 class="category">{{currentCategory}}</h2>
   <mat-accordion>
     <mat-expansion-panel *ngFor="let item of menuItems" (opened)="panelOpenState = true"
       (closed)="panelOpenState = false">
