--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,25 +1,20 @@
+<mat-toolbar-row>
+  <span>Login</span>
+</mat-toolbar-row>
 <div class="form-container">
-    <form [formGroup]="loginForm" class="login-form full-width" (ngSubmit)="onSubmit()">
-      <mat-grid-list cols="1" rowHeight="10:1">
-        <mat-grid-tile>
-          <mat-form-field class="full-width">
-            <input matInput placeholder="Email" formControlName="email">
-            <mat-error *ngIf="email.invalid">
-              {{getEmailErrorMessage()}}
-            </mat-error>
-          </mat-form-field>
-        </mat-grid-tile>
-        <mat-grid-tile>
-          <mat-form-field class="full-width">
-            <input matInput placeholder="Password" type="password" formControlName="password">
-            <mat-error *ngIf="password.invalid">
-              {{getPasswordErrorMessage()}}
-            </mat-error>
-          </mat-form-field>
-        </mat-grid-tile>
-        <mat-grid-tile>
-          <button mat-raised-button color="primary" type="submit">Submit</button>
-        </mat-grid-tile>
-      </mat-grid-list>
-    </form>
-  </div>
+  <form [formGroup]="loginForm" class="login-form full-width" (ngSubmit)="onSubmit()">
+    <mat-form-field class="full-width">
+      <input matInput placeholder="Email" formControlName="email">
+      <mat-error *ngIf="email.invalid">
+        {{getEmailErrorMessage()}}
+      </mat-error>
+    </mat-form-field>
+    <mat-form-field class="full-width">
+      <input matInput placeholder="Password" type="password" formControlName="password">
+      <mat-error *ngIf="password.invalid">
+        {{getPasswordErrorMessage()}}
+      </mat-error>
+    </mat-form-field>
+    <button mat-raised-button color="primary" type="submit">Submit</button>
+  </form>
+</div>
