--- a/src/app/pages/menuitems/menuitems.component.css
+++ b/src/app/pages/menuitems/menuitems.component.css
@@ -14,3 +14,9 @@ table {
   font-weight: 500;
   font-size: 1.4em;
 }
+
+mat-toolbar-row {
+  font-size: 1.5em;
+  color:white;
+  background-color: #ea3131;
+}
