--- a/src/app/auth/register/register.component.css
+++ b/src/app/auth/register/register.component.css
@@ -11,3 +11,9 @@ mat-grid-tile {
     padding-left: 25%;
     width: 50%;
 }
+
+mat-toolbar-row {
+    font-size: 1.5em;
+    color: white;
+    background-color: #ea3131;
+}
