--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -15,6 +15,12 @@
         {{getPasswordErrorMessage()}}
       </mat-error>
     </mat-form-field>
-    <button mat-raised-button color="primary" type="submit">Submit</button>
+    <mat-form-field class="full-width">
+      <input matInput placeholder="Confirm Password" formControlName="confirmPassword" type="password">
+      <mat-error *ngIf="confirmPassword?.invalid">
+        {{getConfirmPasswordErrorMessage()}}
+      </mat-error>
+    </mat-form-field>
+    <button mat-raised-button color="primary" type="submit" [disabled]="registrationForm.invalid">Submit</button>
   </form>
 </div>
