--- a/src/app/pages/menuitems/menuitems.component.html
+++ b/src/app/pages/menuitems/menuitems.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar-row>
     <span>{{currentCategory}}</span>
   </mat-toolbar-row>
-<div class="menuItems">
+<div class="menuItems" [ngStyle]="{'background-image': 'url(../../../assets/images/cat-bg.jpg)'}">
   <mat-accordion>
     <mat-expansion-panel *ngFor="let item of menuItems" (opened)="panelOpenState = true"
       (closed)="panelOpenState = false">
